Revision history for Dancer

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]

  [ DOCUMENTATION ]

  [ ENHANCEMENTS ]

  [ NEW FEATURES ]

  [ STATISTICS ]

1.3138 2015-06-12
  - Promote 1.3137 to non-trial release.

  [ STATISTICS ]
    - code churn: 1 file changed, 1796 insertions(+), 1754 deletions(-)

1.3137 2015-06-05
  [ BUG FIXES ]
    - Dancer::Logger->init invocation was using `setting()` instead of
      `settings()`. (GH#1103, jwittkoski)
    - Skip utf8 tests on cygwin. (GH#1046, mokko)
    - Dancer::Session::YAML now refuse cookies that aren't alphanumerical.
      (yanick)

  [ ENHANCEMENTS ]
    - Provide a way to load settings directly from hash. (GH#1113,
      fgabolde)
    - Remove 'auto-reload' feature. (GH#1058, alambike)
    - Add methods to interact with TT's wrappers. (GH#1034, David Zurborg)

  [ STATISTICS ]
    - code churn: 13 files changed, 277 insertions(+), 212 deletions(-)

1.3136 2015-05-24
  [ DOCUMENTATION ]
    - Remove mention of format 'with_id' from Dancer::Logger::Abstract. 
      (GH#112, Fabrice Gabolde)

  [ ENHANCEMENTS ]
    - Cache sessions such that they are only retrieved once per request.
      (GH#1105, GH#992, Yanick Champoux)

  [ STATISTICS ]
    - code churn: 7 files changed, 119 insertions(+), 16 deletions(-)

1.3135 2015-04-22
  [ DOCUMENTATION ]
    - Document how to work with Dist::Zilla and the 'devel' branch.

  [ ENHANCEMENTS ]
    - Deprecate 'auto_reload' and document alternatives. (GH#1106, isync)
    - Change YAML tests to be in line with new specs. (GH#1108, Slaven
      Rezić)

  [ STATISTICS ]
    - code churn: 12 files changed, 150 insertions(+), 50 deletions(-)

1.3134 2015-02-22
  [ DOCUMENTATION ]
    - Improve Dancer::Request documentation. (GH#1095, Gabor Szabo)
    - Added descriptions to a bunch of internal modules. (GH#1097, Brad
      Macpherson)
    - Correcting the documentation's grammar. (GH#1101, Jonathan Hall)
    - Improve Dancer.pm's documentation wrt the export of 'warnings'. 